Changed scoring results lists to be in reverse chronological order